--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -1,5 +1,5 @@
 
-$dc-primary: #2e3a46;
-$dc-dark: #1e2d3b;
-$dc-ligth-dark: #70797e;
-$dc-white: #FFFFFF;
+$ds-primary: #2e3a46;
+$ds-dark: #1e2d3b;
+$ds-light-dark: #70797e;
+$ds-white: #FFFFFF;
