Add Selection Music Genre

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,4 +1,5 @@
 @import '~/node_modules/bootstrap/scss/bootstrap.scss';
+
 #app {
     font-family: 'Poppins', sans-serif;
     -webkit-font-smoothing: antialiased;
@@ -8,4 +9,9 @@
 
   img {
     max-width: 100%;
+}
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
